# wetter

./: .gitignore  README.md  Wetter.spec  build_exe.bat  favoriten.json  pyproject.toml  requirements.txt  run.py  run.spec
.cursor/rules/: rules.json
.github/workflows/: build-exe.yml  ci.yml
scripts/: ci.sh
src/: __init__.py  wetter.py
src/wetter/: FavoritenManager.py  __init__.py  favoriten_manager.py  ui.py  weather_api.py  weather_types.py  wetter.py
tests/: conftest.py  test_wetter.py
