[project]
name = "wetter"
version = "0.1.0"
description = "graphische app um wetterdaten anzuzeigen"
authors = [
    {name = "Henry Bartke",email = "henry.bartke3@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
